This shit's binding

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.speakmeplugin"
+    package="speak.me.plugin"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -12,11 +12,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-         <service android:name=".SpeakMePlugin"
+         <meta-data android:name="speak.me.keywords" android:value="api, test"/>
+        
+         <service android:name="speak.me.plugin.SpeakMePlugin"
                   android:exported="true">
             <intent-filter>
                 <action android:name="speak.me.action.PICK_PLUGIN" />
-                <category android:name="aexp.intent.category.DEFAULT_PLUGIN_CATEGORY" />
+                <category android:name="speak.me.category.DEFAULT_PLUGIN_CATEGORY" />
             </intent-filter>
         </service>
     </application>
